[package]
name = "perbase"
version = "0.9.1"
authors = ["Seth Stadick <sstadick@gmail.com>", "Schaudge King <yuanshenran@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Schaudge/perbase"
description = "a base statistics tool for BAM/CRAM per position."
readme = "README.md"
categories = ["science"]
keywords = ["depth", "coverage", "bioinformatics", "genomic"]

[profile.release]
lto = "fat"
codegen-units = 1

[lib]
name = "perbase_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "perbase"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
bio = "1.5.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.12"
csv = "1.3.0"
env_logger = "0.11.3"
grep-cli = "0.1.5"
gzp = "0.10"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.21"
lru_time_cache = "0.11.11"
num_cpus = "1.16.0"
rayon = "1.9.0"
rust-lapper = "1.0"
rust-htslib = { version = "0.42", features = ["libdeflate"] }
serde = { version = "1.0.136", features = ["derive"] }
smartstring = { version = "1.0.1", features = ["serde"] }
structopt = "0.3.26"
termcolor = "1.1.3"

[dev-dependencies]
proptest = "1.0.0"
tempfile = "3.1.0"

